src/objects/WorkflowLine__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>ProductFamily__c</referenceTo>
        <relationshipLabel>Workflow Lines</relationshipLabel>
        <relationshipName>FamilyWorkflow_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>Workflow__c</referenceTo>
        <relationshipLabel>Workflow Lines</relationshipLabel>
        <relationshipName>WorkflowLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Line</label>
    <nameField>
        <label>Workflow Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Linses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>